k8s/dev/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-java-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: api-java
    template:
        metadata:
            labels:
                component: api-java
        spec:
            containers:
                - name: api
                  image: 1after/api-java
                  ports:
                    - containerPort: 8080
                  livenessProbe:
                        httpGet:
                            # when "host" is not defined, "PodIP" will be used
                            # host: my-host
                            # when "scheme" is not defined, "HTTP" scheme will be used. Only "HTTP" and "HTTPS" are allowed
                            # scheme: HTTPS
                            path: /ping
                            port: 8080
                            httpHeaders:
                            - name: X-Custom-Header
                              value: Awesome
                        initialDelaySeconds: 60
                        timeoutSeconds: 1                                             
                  readinessProbe:
                        httpGet:
                            path: /ping
                            port: 8080
                        failureThreshold: 80
                        periodSeconds: 10
